--- a/projeto loja de roupas/assets/css/style.css
+++ b/projeto loja de roupas/assets/css/style.css
@@ -70,7 +70,7 @@ body{
     justify-content: center;
 }
 #produto img{
-    height: 200px;
+    width: 100%;
     border-radius: 20px;
 }
 #produto{
