--- a/projeto loja de roupas/assets/css/style.css
+++ b/projeto loja de roupas/assets/css/style.css
@@ -62,6 +62,19 @@ body{
 
    /*Main*/
 
+   /*Banner*/
+.banner{
+    height: 500px;
+    margin: 40px 13% 0 13%;
+    border: solid 7px #ffffff;
+    
+}
+
+.banner img{
+    width: 100%;
+    height: 100%;
+}
+
 #subtitulo{
     margin: 0 auto;
     font-style: italic;
@@ -89,12 +102,12 @@ body{
 
 /*Cartão dos produtos*/
 
-#produto img{
+.produto img{
     width: 100%;
     border-radius: 20px;
     max-height: 170px;
 }
-#produto{
+.produto{
     background-color: #ffffff;
     width: 200px;
     padding: 20px;
@@ -109,16 +122,24 @@ body{
     margin-top: 10px;
     background-color: #033f37;
     width: 103px;
-    padding: 2px;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 10px;
     color: #ffffff;
     padding: 2px;
+    border: none;
 }
-#iconAdd{/*ícone do carrinho de compras*/
-    width: 35px;
+.comprar{/*ícone do carrinho de compras*/
+    width: 103px;
     margin-top: 10px;
+    background-color: #033f37;
+    padding: 5px;
+    color: #ffffff;
+    border-radius: 10px;
+    font-size: 0.9em;
+    font-weight: 600;
+    border: none;
 }
-#iconAdd:hover{
+.comprar:hover{
     cursor: pointer
 }
 
